Correct minor builder spacing

--- a/builder/static/styles/builder.css
+++ b/builder/static/styles/builder.css
@@ -28,6 +28,7 @@
 .content .pages a .page {
     width: 90vw;
     max-width: 700px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     margin: 1vh 0 1vh 0;
